testdata/repos/standalone/SourcingCheck/InvalidSlot/InvalidSlot-0.ebuild
DESCRIPTION="Ebuild with invalid SLOT"
HOMEPAGE="https://github.com/pkgcore/pkgcheck"
SLOT="?"
LICENSE="BSD"
